--- a/site.css
+++ b/site.css
@@ -1,78 +1,14 @@
 
-    #map {
-    height:450px;
-    }
-
     html, body {
     height: 100%;
     margin: 10px;  
     font-family: Arial, Helvetica, sans-serif;
     }
 
-    table tbody tr td {
-    font-size: 12px;
-    }
-
-    table thead tr th {
-    font-size: 12px;
-    }
-
     .modebar{
     display: none !important;
     }
 
-    th {
-    padding: 10px;
-    font-weight: bold;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-    }
-
-    td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-    }
-
-    #div_canada_chart {
+    .div_chart {
     margin-top: 20px;
-    }
-
-    /* clear fix */
-    .grid:after {
-    content: '';
-    display: block;
-    clear: both;
-    }
-
-    .grid-item {
-    position: relative;
-    float: left;
-    width: 220;
-    height: 50px;
-    margin: 10px;
-    padding: 0px;
-    }
-
-    .btn{ 
-        margin-bottom:10px;
-    }
-
-    .text-div {
-        word-wrap: break-word;
-    }
-
-    .stackedtext-div {
-        float: right;
-        word-wrap: break-word;
-    }
-
-    .grid-item > * {
-        margin: 0;
-        padding: 0;
-    }
-
-    .chart-text {
-        font-size: 10px;
-        
     }
