--- a/site.css
+++ b/site.css
@@ -1,7 +1,7 @@
 
     html, body {
     height: 100%;
-    margin: 0px;  
+    margin: 5px 0px 20px 0px; 
     font-family: Arial, Helvetica, sans-serif;
     }
 
