update container div

--- a/site.css
+++ b/site.css
@@ -1,8 +1,7 @@
 
-    html, body {
-    height: 100%;
-    margin: 5px 0px 20px 0px; 
-    font-family: Arial, Helvetica, sans-serif;
+    .container { 
+        margin-top: 20px;
+        margin-bottom: 40px; 
     }
 
     .modebar{
